# mumble-plugin-template

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  plugin.c
.github/workflows/: cmake-multi-platform.yml  release.yml
factorio/: control.lua  info.json
include/: MumbleAPI_v_1_0_x.h
mumble/: CMakeLists.txt  LICENSE  getline.c  logfile.c  logfile_test.c  manifest.xml  plugin.c
